--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,17 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid class="ion-no-padding" style="height: 100%;">
+    <ion-row class="ion-align-items-center" style="height: 100%;">
+      <ion-col size="12" class="ion-text-center">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="ion-padding">
+    <ion-button size="large" (click)="goToLevelsPage()">Mathematics</ion-button>
+    <ion-button size="large" (click)="goToScienceLevel()">Science</ion-button>
+    <ion-button size="large" (click)="goToTechLevel()">Technology</ion-button>
   </div>
+</ion-col>
+</ion-row>
+</ion-grid>
+
 </ion-content>
